2009-03- Matěj Týč <bubla@users.sf.net>
	* configure.ac: Corrected example compilation report
	* m4/devil-definitions.m4: Added correct LCMS absence correct handling

2009-03-16 Denton Woods <doomwiz@users.sf.net>
	* ilu_error-italian.h: Added Italian translation of error messages.
	* ilu_error.c: Added Italian support.
	* ilu.h: Added ILU_ITALIAN.

2009-03-14 Denton Woods <doomwiz@users.sf.net>
	* il_alloc.c:130: Fixed bug #2671858 (used Ptr instead of ptr).
	
2009-03-11 Matěj Týč <bubla@users.sf.net>
	* configure.ac: Removed "Break on warnings" option.
	* tests/format_test/ilu_checks.sh: Added ILU test

2009-03-10 Denton Woods <doomwiz@users.sf.net>
	* lib/Makefile.am: Added ilut_config.h.

2009-03-08 Matěj Týč <bubla@users.sf.net>
	* docs/Makefile.am: Fixed distcheck by overriding dvi target.
	* lib/Makefile.am: Renoved ilu_mipmap.h file
	* configure.ac: Added option to disable checks for 'nvidia texture tools' and
	'libsquish'

2009-03-08 Denton Woods <doomwiz@users.sf.net>
	* il_ilbm.c:410: Changed to IL_BGR from IL_RGB.
	* il_iff.c (ilLoadIffF/ilLoadIffL): Changed to call Lbm loading functions
	  if Iff loading fails, since they both can have the .iff extension.
	* il_ilbm.c:416: Added origin reference.
	* configure.ac: Added more file formats to the format checks.
	* Makefile.am: Removed ilu_mipmap.h.  Added ilu_error-french.h.

2009-03-07 Denton Woods <doomwiz@users.sf.net>
	* Updated version numbers to 1.7.8 project-wide.
	* DevIL_manual.texi: Added several file formats to the appendix.
	* il_io.c: Updated Doxygen comments for loading/saving functions.
	* libraries.txt: Updated with new libraries.
	* il_io.c (ilTypeFromExt): Changed return value of FITS files to IL_FITS.
		Added DICOM, FTX, Rot and Texture checks.
	* il_states.c/.h: Updated with newer file formats.
	* il_blp.c:649: Fixed ilNewImageFull call to use color index.
			   659: Fixed memcpy from base image to new mipmap.